# newbeginning

./: .gitignore  CMakeLists.txt  main.cpp  newSIR.cpp  newSIR.hpp  plot.cpp  relazione_inguardabile.txt  test.txt  testSIR.cpp
grafica/: CMakeCache.txt  CMakeLists.txt  Makefile  SIRgrafica.cpp  SIRgrafica.hpp  animation.cpp  animation.hpp  animazione.cpp  animazione.hpp  automa.cpp  automa.hpp  bordi.cpp  bordi.hpp  classe.cpp  classe.hpp  cmake_install.cmake  finestra.cpp  finestra.hpp  grafica  grafico_sfml  gui.cpp  gui.hpp  main.cpp  mainfake.cpp  maingrafica.cpp  mondo.cpp  mondo.hpp  paletta.cpp  paletta.hpp  pennello.cpp  pennello.hpp  riquadro_informazioni.cpp  riquadro_informazioni.hpp  struct_enum.hpp  test.txt  uomini.txt
prova1/: CMakeLists.txt  README.md  boost.hpp  main.cpp  newSIR.cpp  newSIR.hpp  plot.cpp  test.txt  testSIR.cpp
prova1/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  grafico_sfml
